FIxing login screen on small screens

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,7 +1,3 @@
-.card {
-  width: 400px;
-}
-
 .avatar {
   position: absolute;
   bottom: 140px;
